<resources>
    <string name="app_name">MovieApp</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="series">Series</string>
    <string name="movies">Movies</string>
    <string name="more">More</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>